[package]
name = "rusty_ethereum"
version = "0.1.0"
authors = ["Eric Seidel <github@eseidel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1"
itertools = "0.10.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sha3 = "0.9.1"
