[package]
name = "rusty_ethereum"
version = "0.1.0"
authors = ["Eric Seidel <github@eseidel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tiny-keccak = { version ="2.0.2", features = ["keccak"] }
